# automatizacao

./: README.md  pyproject.toml
.github/workflows/: automacao.yaml
projeto1/: .Rhistory  projeto1.html  projeto1.qmd
projeto1/.Rproj.user/C03F9851/: persistent-state
projeto1/.Rproj.user/C03F9851/pcs/: windowlayoutstate.pper
projeto1/.Rproj.user/C03F9851/quarto-crossref/: DE7DF746  INDEX
projeto1/.Rproj.user/C03F9851/sources/prop/: 7AAAE97D  INDEX
projeto1/.Rproj.user/C03F9851/sources/session-42971836/: BA865EE4
projeto1/.Rproj.user/shared/notebooks/: paths
projeto1/.Rproj.user/shared/notebooks/F1D9625E-projeto1/1/C03F985142971836/: chunks.json
projeto1/.Rproj.user/shared/notebooks/F1D9625E-projeto1/1/s/c467sb4fkgle1/: 000019.csv  00001a.snapshot
projeto1/.Rproj.user/shared/notebooks/F1D9625E-projeto1/1/s/ccw8vkpcgh044/: 00000f.csv
